fix: 로케이션 크기 반환 오류 수정
- default 층 제외
- 개수가 0이된 층 제외
- println 제거